--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -14,13 +14,18 @@
         </button>
       </li>
       <li class="nav-item">
-        <button class="btn btn-primary" (click)="navigateTo('settings')">
-          <i class="fas fa-cogs"></i> Ayarlar
+        <button class="btn btn-primary" (click)="navigateTo('users')">
+          <i class="fas fa-users"></i> Kullanıcılar
         </button>
       </li>
       <li class="nav-item">
-        <button class="btn btn-primary" (click)="navigateTo('users')">
-          <i class="fas fa-users"></i> Kullanıcılar
+        <button class="btn btn-primary" (click)="navigateTo('role')">
+          <i class="fa-solid fa-user-tag"></i> Roller
+        </button>
+      </li>
+      <li class="nav-item">
+        <button class="btn btn-primary" (click)="navigateTo('settings')">
+          <i class="fas fa-cogs"></i> Ayarlar
         </button>
       </li>
     </ul>
