--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -14,3 +14,28 @@
     background-color: var(--primary-hover-color);
     border-color: var(--primary-hover-color);
   }
+
+  .btn-primary {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+  }
+  
+  .btn-primary:hover {
+    background-color: var(--primary-hover-color);
+    border-color: var(--primary-hover-color);
+  }
+  
+  .list-group-item {
+    background-color: var(--card-background-color);
+    color: var(--text-color);
+    border: none;
+  }
+  
+  .nav-tabs .nav-link {
+    color: var(--secondary-text-color);
+  }
+  
+  .nav-tabs .nav-link.active {
+    background-color: var(--primary-color);
+    color: var(--background-color);
+  }
