--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <utk-navbar></utk-navbar>
 <router-outlet></router-outlet>
-<!-- <utk-notifications></utk-notifications> --> 
+<utk-notifications></utk-notifications>
