--- a/src/app/components/admin-role-management/admin-role-management.component.html
+++ b/src/app/components/admin-role-management/admin-role-management.component.html
@@ -20,7 +20,7 @@
         <thead>
           <tr>
             <th><i class="fas fa-id-badge"></i> ID</th>
-            <th><i class="fas fa-heading"></i> Rol Adı</th>
+            <th><i class="fas fa-heading "></i> Rol Adı</th>
             <th><i class="fas fa-tools"></i> İşlemler</th>
             <th></th>
 
@@ -30,10 +30,10 @@
           <tr *ngFor="let role of roleModelObj">
             <td><i class="fas fa-id-badge"></i> {{ role.id }}</td>
             <td>{{ role.name }}</td>
-            <td>
+            <td class="btn-margin">
               <button class="btn btn-warning me-2 mt-2 mb-2 w-100" (click)="editRole(role)"><i class="fa-solid fa-pen"></i> Düzenle</button>
             </td>
-            <td>
+            <td class="btn-margin">
               <button class="btn btn-danger me-2 mt-2 mb-2  w-100" (click)="deleteRole(role.id)"><i class="fas fa-trash-alt"></i> Sil</button>
             </td>
           </tr>
