--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -9,6 +9,11 @@
         </button>
       </li>
       <li class="nav-item">
+        <button class="btn btn-primary" (click)="navigateTo('ilan/ekle')">
+          <i class="fa-solid fa-user-tag"></i> İlan Ekle
+        </button>
+      </li>
+      <li class="nav-item">
         <button class="btn btn-primary" (click)="navigateTo('alan')">
           <i class="fas fa-cogs"></i> Alan Bölüm İşlemleri
         </button>
