--- a/src/app/components/cards.forms/cards.forms.component.html
+++ b/src/app/components/cards.forms/cards.forms.component.html
@@ -17,31 +17,31 @@
         <div class="form-group">
           <label for="position">Pozisyon:</label>
           <select id="position" [(ngModel)]="formData.pozisyonId" name="position">
-            <option value="null">Seçiniz</option>
-            <option *ngFor="let pos of positions" [value]="pos.id">{{ pos.name }}</option>
+        <option value="0" selected>Seçiniz</option>
+        <option *ngFor="let pos of positions" [value]="pos.id">{{ pos.ad }}</option>
           </select>
         </div>
 
         <div class="form-group">
           <label for="department">Bölüm:</label>
           <select id="department" [(ngModel)]="formData.bolumId" name="department">
-            <option value="null">Seçiniz</option>
-            <option *ngFor="let dept of departments" [value]="dept.id">{{ dept.name }}</option>
+            <option value="0">Seçiniz</option>
+            <option *ngFor="let bol of bolums" [value]="bol.id">{{ bol.ad }}</option>
           </select>
         </div>
       </div>
-
       <div class="form-row">
         <div class="form-group">
-          <label for="startDate">Başlangıç Tarihi:</label>
-          <input type="date" id="startDate" [(ngModel)]="formData.baslangicTarihi" name="startDate">
+          <label for="startDate">Başlangıç Tarihi ve Saati:</label>
+          <input type="datetime-local" id="startDate" [(ngModel)]="formData.baslangicTarihi" name="startDate">
         </div>
-
+      
         <div class="form-group">
-          <label for="endDate">Bitiş Tarihi:</label>
-          <input type="date" id="endDate" [(ngModel)]="formData.bitisTarihi" name="endDate">
+          <label for="endDate">Bitiş Tarihi ve Saati:</label>
+          <input type="datetime-local" id="endDate" [(ngModel)]="formData.bitisTarihi" name="endDate">
         </div>
       </div>
+      
 
       <button type="submit">Kaydet</button>
     </form>
