--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,24 @@
 <h1 class="text-center mt-3">Welcome to UTK</h1>
 <p class="text-center">Kocaeli University Academic Staff Application System</p>
-<utk-cards></utk-cards>
-
+<div class="container mt-4">
+    <div class="mt-4">
+        <ul class="nav nav-tabs" id="applicationTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active"
+                    type="button" role="tab" (click)="status = 'active'">Aktif İlanlar</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="past-tab" data-bs-toggle="tab" data-bs-target="#past" type="button"
+                    role="tab" (click)="status = 'past'">Geçmiş İlanlar</button>
+            </li>
+        </ul>
+        <div class="tab-content mt-3">
+            <div class="tab-pane fade show active" id="active" role="tabpanel">
+                <utk-cards [status]="status"></utk-cards>
+            </div>
+            <div class="tab-pane fade" id="past" role="tabpanel">
+                <utk-cards [status]="status"></utk-cards>
+            </div>
+        </div>
+    </div>
+</div>
