--- a/src/styles.css
+++ b/src/styles.css
@@ -83,3 +83,30 @@
   border-radius: 10px !important;
 }
 
+.ql-size-huge {
+  font-size: 2em;
+}
+
+.ql-size-large {
+  font-size: 1.5em;
+
+}
+
+.ql-size-medium {
+  font-size: 1em;
+}
+
+.ql-size-small {
+  font-size: 0.5em;
+}
+
+
+/* Light tema için filtre */
+[data-theme="light"] input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(0%) sepia(0%) saturate(0%) brightness(1) contrast(100%) hue-rotate(180deg) opacity(0.8);
+}
+
+/* Dark tema için filtre */
+[data-theme="dark"] input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(100%) sepia(100%) saturate(100%) brightness(1) contrast(100%) hue-rotate(180deg);
+}
