--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -7,6 +7,8 @@
 /* Sol Menü */
 #sidebar {
   width: 250px;
+  min-width: 250px;
+  max-width: 250px;
   background-color: var(--primary-color);
   color: var(--text-color);
   height: 100%;
