--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -29,6 +29,10 @@
         </button>
       </li>
       <li class="nav-item">
+        <button class="btn btn-primary" (click)="navigateTo('bildirim')">
+          <i class="fas fa-bell"></i> Bildirim
+        </button>
+      <li class="nav-item">
         <button class="btn btn-primary" (click)="navigateTo('settings')">
           <i class="fas fa-cogs"></i> Ayarlar
         </button>
