--- a/src/app/components/notifications/notifications.component.html
+++ b/src/app/components/notifications/notifications.component.html
@@ -1,7 +1,7 @@
 <div class="notification-container" *ngIf="notification">
   <div class="notification" [style.backgroundColor]="notification.bgColor">
     <div class="notification-icon">
-      <i [class]="notification.icon"></i>
+      <i class="fa " [class]="notification.icon"></i>
     </div>
     <div class="notification-content">
       <h4 class="notification-title">{{ notification.title }}</h4>
